# freetds

./: CMakeLists.txt  single_win_test  wintests.sh
include/: ctlib.h  dblib.h
include/freetds/: bool.h  convert.h  odbc.h  proto.h  sysdep_private.h  tds.h
include/freetds/utils/: des.h  dlist.h  hmac_md5.h  md4.h  md5.h
src/apps/: CMakeLists.txt
src/apps/unittests/: defncopy.c
src/ctlib/: CMakeLists.txt  blk.c  cs.c  ct.c  ctlib.pc.in  ctutil.c
src/ctlib/unittests/: all_types.c  common.h  cs_convert.c  data.c  row_count.c  t0006.c  variant.c  will_convert.c
src/dblib/: CMakeLists.txt  bcp.c  dblib.c  dblib.pc.in
src/dblib/unittests/: batch_stmt_ins_sel.c  batch_stmt_ins_upd.c  bcp.c  bcp_getl.c  canquery.c  common.c  common.h  numeric.c  rpc.c  rpc.sql  spid.c  string_bind.c  t0001.c  t0002.c  t0013.c  t0014.c  t0016.c  t0017.c  t0022.c  timeout.c
src/odbc/: CMakeLists.txt  bcp.c  odbc.c  odbc_data.c  odbc_util.c  sql2tds.c
src/odbc/unittests/: all_types.c  array.c  array_error.c  array_out.c  bcp.c  binary_test.c  blob1.c  c2string.c  cancel.c  common.c  common.h  connection_string_parse.c  data.in  describecol.c  describecol.in  (+11 more)
src/pool/: main.c  member.c  pool.h  user.c
src/replacements/: CMakeLists.txt
src/replacements/unittests/: Makefile.am  common.h  strings.c  strsep.c  strtok_r.c
src/tds/: bulk.c  config.c  convert.c  data.c  login.c  mem.c  net.c  packet.c  query.c  token.c  util.c
src/utils/: CMakeLists.txt
src/utils/unittests/: Makefile.am  bytes.c  challenge.c  common.h  condition.c  dlist.c  mutex1.c  passarg.c  path.c  smp.c
(+15 files in other folders)
